tests/paczka1/fuzzy1/71271150.err
Error in line 1: HTxn S555 354,5
Error in line 3: HTxn S967 120,6
Error in line 14: Uajm2R S984 39,1
Error in line 32: HTxn S555 28,3
Error in line 23: tEd S984 53,7
Error in line 35: HTxn S984 83,8
